force-app/main/default/objects/Cost_Estimation__c/Cost_Estimation__c.object-meta.xml
<CustomObject>
    <description>Channel-wise cost projections for a journey execution</description>
    <label>Cost Estimation</label>
    <nameField>
        <displayFormat>COST-{0000}</displayFormat>
        <label>Cost Estimation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Estimations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>