force-app/main/default/objects/Cost_Estimation__c/fields/Journey_Execution__c.field-meta.xml
<CustomField>
    <fullName>Journey_Execution__c</fullName>
    <label>Journey Execution</label>
    <referenceTo>Journey_Execution__c</referenceTo>
    <relationshipLabel>Cost Estimations</relationshipLabel>
    <relationshipName>Cost_Estimations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>