force-app/main/default/objects/Cost_Estimation__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unit Cost</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>