force-app/main/default/objects/Cost_Estimation__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>